kubernetes/apps/network/dns-resolver/dnscrypt-proxy/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: dnscrypt-proxy-doh
spec:
  parentRefs:
    - name: gateway-external
      namespace: kube-system
  hostnames:
    - doh.${SECRET_DOMAIN}
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /dns-query
      backendRefs:
        - name: dnscrypt-proxy-app
          port: 8443
